fixed listing component too wide

--- a/src/app/all-cars/all-cars.component.css
+++ b/src/app/all-cars/all-cars.component.css
@@ -1,7 +1,7 @@
 div {
   display: flex;
   flex-direction: column;
-  width: 1100px;
+  width: 70vw;
   margin: 5px auto;
 }
 
