--- a/src/app/listing/listing.component.css
+++ b/src/app/listing/listing.component.css
@@ -20,7 +20,7 @@ img {
 }
 
 mat-drawer-container {
-  min-width: 80vw;
+  min-width: 70vw;
   height: 120px;
   margin-bottom: 10px;
   border-radius: 5px;
